--- a/src/index.css
+++ b/src/index.css
@@ -8,18 +8,21 @@
     src: url('./fonts/ProximaNova-Bold.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
+    font-display: swap;
   }
   @font-face {
     font-family: 'ProximaNova';
     src: url('./fonts/ProximaNova-Semibold.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
+    font-display: swap;
   }
   @font-face {
     font-family: 'ProximaNova';
     src: url('./fonts/ProximaNova-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
+    font-display: swap;
   }
 }
 
